--- a/.gitignore
+++ b/.gitignore
@@ -16,6 +16,9 @@ $RECYCLE.BIN/
 
 # Windows shortcuts
 *.lnk
+*.obj
+
+# Windows Link Object
 
 # =========================
 # Operating System Files
